--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,17 @@
 {
-	"extends": ["next/core-web-vitals", "next", "prettier"]
+	"extends": ["next/core-web-vitals", "next", "prettier", "plugin:@typescript-eslint/recommended"],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
+	"plugins": ["@typescript-eslint", "react"],
+	"rules": {
+		"indent": ["error", "tab"],
+		"quotes": ["warn", "double"],
+		"semi": ["error", "always"]
+	}
 }
