--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@chakra-ui/react": "^2.4.4",
 		"@emotion/react": "^11",
 		"@emotion/styled": "^11",
+		"@fontsource/montserrat": "^4.5.13",
 		"@next/font": "13.0.7",
 		"@types/node": "18.11.17",
 		"@types/react": "18.0.26",
@@ -23,7 +24,9 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.7.1",
-		"typescript": "4.9.4"
+		"sass": "^1.57.1",
+		"typescript": "4.9.4",
+		"typewriter-effect": "^2.19.0"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.47.0",
