--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@emotion/styled": "^11",
 		"@fontsource/lobster-two": "^4.5.10",
 		"@fontsource/montserrat": "^4.5.13",
+		"@fontsource/rubik-moonrocks": "^4.5.4",
+		"@fontsource/tangerine": "^4.5.9",
 		"@next/font": "13.0.7",
 		"@types/node": "18.11.17",
 		"@types/react": "18.0.26",
