--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
 		"@fontsource/montserrat": "^4.5.13",
 		"@fontsource/rubik-moonrocks": "^4.5.4",
 		"@fontsource/tangerine": "^4.5.9",
-		"@frank-mayer/react-tag-cloud": "^1.1.1",
 		"@next/font": "13.0.7",
 		"@types/node": "18.11.17",
 		"@types/react": "18.0.26",
 		"@types/react-dom": "18.0.9",
+		"TagCloud": "^2.3.2",
 		"eslint": "8.30.0",
 		"eslint-config-next": "13.0.7",
 		"framer-motion": "^7.10.2",
