--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@fontsource/montserrat": "^4.5.13",
 		"@fontsource/rubik-moonrocks": "^4.5.4",
 		"@fontsource/tangerine": "^4.5.9",
+		"@frank-mayer/react-tag-cloud": "^1.2.1",
 		"@next/font": "13.0.7",
 		"@types/node": "18.11.17",
 		"@types/react": "18.0.26",
